name:                hesh
version:             1.13.0
synopsis:            the Haskell Extensible Shell: Haskell for Bash-style scripts
description:         Hesh makes writing scripts in Haskell easier by providing Bash-style syntax for running commands, implicit module imports, and automatic dependency inference and Cabal file generation. It allows shebang execution of scripts.
homepage:            https://github.com/jekor/hesh
bug-reports:         https://github.com/jekor/hesh/issues
license:             MIT
license-file:        LICENSE
author:              Chris Forno
maintainer:          jekor@jekor.com
copyright:           2015, 2016, 2017 Chris Forno
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

source-repository    head
  type:              git
  location:          git://github.com/jekor/hesh.git

executable hesh
  main-is:             Main.hs
  build-depends:       aeson,
                       base >= 4.7 && < 6,
                       bytestring,
                       Cabal,
                       cartel >= 0.16,
                       cmdargs,
                       containers,
                       cryptonite,
                       data-default,
                       directory,
                       filepath,
                       hackage-db >= 1.8,
                       haskell-src-exts < 1.18,
                       hesh == 1.13.0,
                       parsec >= 3,
                       process,
                       text,
                       time,
                       uniplate,
                       unix,
                       utf8-string
  hs-source-dirs:      hesh
  default-language:    Haskell2010
  ghc-options:         -threaded

library
  hs-source-dirs:      lib
  exposed-modules:     Hesh
                       Hesh.Process
                       Hesh.Shell
  build-depends:       base >= 4.7 && < 6,
                       exceptions,
                       filemanip,
                       parsec >= 3,
                       process,
                       template-haskell,
                       text,
                       transformers
  default-language:    Haskell2010
